--- a/index.html
+++ b/index.html
@@ -1,17 +1,64 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Young+Serif&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/svg+xml" href="/meeting-alt.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HRnet</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<html>
+    <head>
+        <title>HRnet</title>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="jquery.datetimepicker.full.min.js"></script>
+        <link rel="stylesheet" href="jquery.datetimepicker.css" />
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
+        <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+        <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+        <script src="app.js"></script>
+        <link rel="stylesheet" href="app.css" />
+    </head>
+    <body>
+        <div class="title">
+            <h1>HRnet</h1>
+        </div>
+        <div class="container">
+            <a href="employee-list.html">View Current Employees</a>
+            <h2>Create Employee</h2>
+            <form action="#" id="create-employee">
+                <label for="first-name">First Name</label>
+                <input type="text" id="first-name" />
+
+                <label for="last-name">Last Name</label>
+                <input type="text" id="last-name" />
+
+                <label for="date-of-birth">Date of Birth</label>
+                <input id="date-of-birth" type="text" >
+
+                <label for="start-date">Start Date</label>
+                <input id="start-date" type="text" >
+
+                <fieldset class="address">
+                    <legend>Address</legend>
+
+                    <label for="street">Street</label>
+                    <input id="street" type="text" />
+
+                    <label for="city">City</label>
+                    <input id="city" type="text" />
+
+                    <label for="state">State</label>
+                    <select name="state" id="state"></select>
+
+                    <label for="zip-code">Zip Code</label>
+                    <input id="zip-code" type="number" />
+                </fieldset>
+
+                <label for="department">Department</label>
+                <select name="department" id="department">
+                    <option>Sales</option>
+                    <option>Marketing</option>
+                    <option>Engineering</option>
+                    <option>Human Resources</option>
+                    <option>Legal</option>
+                </select>
+            </form>
+
+            <button onclick="saveEmployee()">Save</button>
+        </div>
+        <div id="confirmation" class="modal">Employee Created!</div>
+    </body>
 </html>
