--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Young+Serif&display=swap" rel="stylesheet">
     <link rel="icon" type="image/svg+xml" href="/meeting-alt.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="HRnet est un outil dédié aux ressources humaines de la société WealthHealth qui permet de gérer les dossiers des employés.">
     <title>HRnet</title>
   </head>
   <body>
